--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    overflow: hidden;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
     background-color: aliceblue;
+    font-family: 'Poppins', 'sans-serif';
+}
+
+.center {
+    position: relative;
+    width: 400px;
+}
+
+.center div {
+    position: relative;
+    margin: -30px 0;
+    background: #000;
+    height: 100px;
+    z-index: 2;
+    transform: skewY(-5deg);
+    justify-content: center;
+    align-items: center;
+
+}
+
+.center div:nth-child(2),
+.center div:nth-child(4)
+{
+    transform: skewY(14.5deg);
+    background: #ccc;
 }
